--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-hacker
-title: Minha página
-description: Nihil
+title: configure && make && sudo make install
+description: Isso não é um portfólio. 
+
 
